<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rl_content"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        android:id="@+id/layout_head"
        layout="@layout/app_toolbar"/>


    <LinearLayout
        android:id="@+id/ll_pay_product"
        android:layout_below="@+id/layout_head"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_marginTop="12dp"
        android:layout_below="@+id/ll_pay_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_pay_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/ts_small_11"
            android:layout_marginLeft="15dp"
            android:textColor="@color/main_color"
            android:stateListAnimator="@drawable/state_list_animator_z"
            android:text="@string/pay_question"/>

        <LinearLayout
            android:id="@+id/ll_declare"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/ts_small_11"
                android:textColor="@color/gray_c5c5c5"
                android:text="@string/pay_bottmom_declare_left"/>
            <TextView
                android:id="@+id/tv_pay_declare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textSize="@dimen/ts_small_11"
                android:textColor="@color/gray_c5c5c5"
                android:text="@string/pay_declare"/>
        </LinearLayout>

    </RelativeLayout>


    <FrameLayout
        android:id="@+id/animation_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent" />
    <LinearLayout
        android:id="@+id/ll_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="invisible"
        android:orientation="horizontal"/>

    <com.resource.app.customview.PayTypeView
        android:id="@+id/view_pay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.resource.app.customview.MSGView
        android:id="@+id/msg_view"
        android:visibility="gone"
        android:layout_below="@+id/layout_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />
</RelativeLayout>
